# GuitarFX

./: .gitignore  CMakeLists.txt  README.md
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
